# BREP.io

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  vite.config.js  vite.config.kernel.js
docs/: api-examples.md  cpp-solid-porting.md  developer-index.md  dialog-screenshots.md  expressions.md  getting-started.md  plugins.md
docs/developer/architecture/: index.md
docs/developer/embedding/: index.md
docs/developer/kernel/: index.md
docs/developer/subsystems/: index.md
docs/features/: datium.md  datum.md  index.md  smooth-with-subdivision.md
docs/modes/: modeling.md  sketch.md
docs/workbenches/: all.md  modeling.md  wire-harness.md
manifold-plus/: CMakeLists.txt  bindings.cpp  brep_solid_bindings.cpp  brep_solid_core.cpp  brep_solid_core.h  fillet_segment_builder.cpp  primitive_builder.cpp  primitive_builder.h  tube_builder.cpp  tube_builder.h
scripts/: buildCloudflare.js  buildManifoldPlus.js  capture.js  collectDependencyLicenses.js  manifoldSourceConfig.js  prepareManifoldRuntime.js  setManifoldSource.js
scripts/capture/docsShots/: expressionsScreenshot.js
src/: PartHistory.js  index.js
src/BREP/: BetterSolid.js  CppSolidCore.js  Tube.js  applyBooleanOperation.js  faceThicken.js  primitives.js  setupManifold.js  solidOverlapDiagnosticsCore.js
src/BREP/SolidMethods/: booleanOps.js  chamfer.js  fillet.js  lifecycle.js  manifoldOps.js  transforms.js  visualize.js
src/BREP/fillets/: fillet.js  inset.js
src/UI/: CADmaterials.js  HistoryWidget.js  expressionsManager.js  featureDialogs.js  fileManagerWidget.js  solidOverlapDiagnostics.js  startupTour.js  triangleDebuggerWindow.js  viewer.js
src/UI/cad/: CadFrameApp.js
src/UI/demo/: ScriptedDemoMouse.js
src/UI/pmi/: PMIMode.js  (+1 more)
src/pmi/: PMIViewsManager.js
src/simulation/: LinearMotionEntity.js  RotationMotionEntity.js  SimulationStateManager.js  SimulationWorkbenchManager.js
src/tests/: test_boolean_overlap_conditioning.js  test_configuratorExpressions.js  test_cppChamfer.js  test_cppFaceNamingRegression.js  test_cppPrimitives.js  test_cppSolidBakeTransform.js  test_cppSolidCore.js  test_cppSolidNativeOps.js  test_cppTube.js  test_fillet_generated_history_20260321144106.js  test_generated_history_20260418030116.js  test_manifoldPlus.js  test_pmiViewVisibilityState.js  test_pmiViewsManager.js  test_pmiViewsWidget.js  test_remeshFeature.js  test_smooth_with_subdivision.js  test_thickenFeature.js  tests.js
src/utils/: configuratorUtils.js
src/workbenches/: index.js  simulationWorkbench.js
(+16 files in other folders)
